fixing hover state on navigation on mobile devices

--- a/src/app/common/header/navigation/navigation.component.scss
+++ b/src/app/common/header/navigation/navigation.component.scss
@@ -115,12 +115,15 @@
             background-position: 100%;
             color: $color-primary;
             transform: translateX(1rem);
+
         }
 
         @include respond(small) {
             &:hover {
                 transform: none;
                 background-position: 0 0;
+                color: $color-white;
+
             }
         }
     }
@@ -148,5 +151,10 @@
     @include respond(small) {
         border-radius: 10px;
         transform: none;
+
+        &:hover {
+            background-position: 100%;
+            color: $color-primary;
+        }
     }
 }
